# QuantumGrav

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  Project.toml  QUICK_REFERENCE_DDP.md  README.md  README_DDP_IMPLEMENTATION.md  TRAINERDP_DETAILED_FIXES.md  TRAINERDP_FIXES_SUMMARY.md  index.html  objects.inv  requirements.txt
QuantumGrav/: Project.toml
QuantumGrav.jl/: Manifest.toml  Project.toml
QuantumGravPy/: mkdocs.yml  pyproject.toml  requirements-cpu.txt  requirements-cuda.txt  requirements-cuda12.8.txt  requirements-macos.txt  requirements-rocm.txt
QuantumGravPy/configs/: train_classifier.yaml  train_custom_model.yaml  train_ddp.yaml
QuantumGravPy/docs/: api.md  datasets_and_preprocessing.md  distributed_training_ddp.md  getting_started.md  hparam_tuning.md  index.md  license.md  models.md  training_a_model.md
QuantumGravPy/docs/examples/: base_settings.yaml  search_space.yaml  train_custom_model.ipynb  train_ddp_standalone_example.py  train_simple_model.ipynb  train_simple_model_with_sampler.ipynb  tune_example.py  tuning_config.yaml
QuantumGravPy/notebooks/: Project.toml  classification.ipynb  juliacall_experiments.ipynb  test.py  test_module.jl
QuantumGravPy/src/QGTune/: dependencies.yaml  explore.ipynb  test.yaml  tune.py  tune_example.py  tunning_config.yaml
QuantumGravPy/src/QuantumGrav/: GraphEmbeddingToLatent.py  __init__.py  autoregressive_decoder.py  base.py  classifier.py  config.yaml  config_utils.py  data_parallel.py  dataloaders.py  dataset.py  dataset_base.py  dataset_inmemory.py  dataset_mixin.py  dataset_ondisk.py  dataset_onthefly.py  ddp.py  early_stopping.py  evaluate.py  evaluate_ddp.py  gfeaturesblock.py  gnn_autoencoder.py  gnn_block.py  gnn_model.py  gnnblock.py  graphfeatures_block.py  julia_interface.py  julia_worker.py  linear_sequential.py  load_zarr.py  sequential_model.py  skip_layer.py  test.ipynb  train.py  train_ddp.py  training.py  utils.py
QuantumGravPy/src/QuantumGrav/QGTune/: tune.py
QuantumGravPy/src/QuantumGrav/models/: __init__.py  autoregressive_decoder.py  embedding_to_latent.py  gnn_block.py  gps_transformer.py  linear_sequential.py  node_update_GRU.py  sequential.py  skipconnection.py
QuantumGravPy/src/hparam_tuning/: dependencies.yaml  search_space.yaml  tune.py  tunning_config.yaml
QuantumGravPy/test/: basic_ddp_example.py  config.yaml  conftest.py  julia_testmodule.jl  test_autoregressive_decoder.py  test_classifier.py  test_classifier_block.py  test_config_utils.py  test_dataset.py  test_datasetbase.py  test_datasetmixin.py  test_early_stopping.py  test_earlystopping.py  test_embedding_to_latent.py  test_evaluate.py  test_gfeaturesblock.py  test_gnn_block.py  test_gnn_encoder.py  test_gnn_model.py  test_gnnblock.py  test_gnnmodel.py  test_gnnparts_register.py  test_gps_transformer.py  test_gpstransformer.py  test_graph_features_block.py  test_inmemorydataset.py  test_juliaworker.py  test_linearsequential.py  test_load_zarr.py  test_node_update_GRU.py  test_ondiskdataset.py  test_ontheflydataset.py  test_sequential.py  test_sequential_model.py  test_skip_layer.py  test_skipconnection.py  test_trainer.py  test_trainer_ddp.py  test_tune.py  test_utils.py
api/: index.html
configs/: createdata_default.yaml
datasets_and_preprocessing/: index.html
getting_started/: index.html
hparam_tuning/: index.html
hyperparams/: classification.ipynb
jl/: Project.toml
license/: index.html
models/: index.html
notebooks/: dVAE.ipynb  data.ipynb  gatVAE.ipynb  gcn.jl  gcnVAE.ipynb
py/: pyproject.toml  requirements_torch_cu128.txt  requirements_torchgeo_cu128.txt
py/notebooks/: classification.ipynb  data.ipynb  optimization_strategies.ipynb  regression.ipynb  transformer_example.ipynb
py/src/QuantumGrav/: classifier.py  gcn.py  graphfeatures.py
py/sweep/: wandb_sweep.py
py/tutorials/: data_handling_on_graphs.ipynb  graph_classification.ipynb  loading_custom_data.ipynb  torch_tensor.ipynb
search/: search_index.json
src/: QuantumGrav.jl  datageneration.jl  dataloader.jl  graphdataset.jl  tabledataset.jl  utils.jl
test/: Project.toml  dummy.jl  runtests.jl  test_datageneration.jl  test_dataloader.jl  test_graphdataset.jl  (+1 more)
(+84 files in other folders)
