[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/QuantumGrav", "src/QGTune"]

[project]
name = "QuantumGrav"
version = "0.1.0"
description = "Graph neural networks for the causal set approach to quantum gravity"
authors = [
    { name = "Harald Mack", email = "harald.mack@protonmail.com" },
]
requires-python = ">= 3.12"
license = { file = "../LICENSE"} 
readme = { file = "../README.md", content-type = "text/markdown" }

dependencies = [
    "torch", 
    "torchaudio",
    "torchvision",
    "torch-geometric",
    "h5py",
    "pandas",
    "seaborn",
    "matplotlib",
    "scikit-learn",
    "joblib",
    "juliacall",
    "PyYAML", 
    "zarr",
    "optuna",
]

# Optional dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-vvv",
    "-s",
]