[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "QuantumGrav"
version = "0.1.0"
description = "Graph neural networks for the causal set approach to quantum gravity"
authors = [
    {name = "Fabian Wagner", email = "f.wagner@thphys.uni-heidelberg.de"},
    { name = "Harald Mack", email = "harald.mack@protonmail.com" },
    { name = "Tuyen Le", email = "tuyen.le@iwr.uni-heidelberg.de" },
]
requires-python = ">= 3.12"
license = { file = "../LICENSE"}
readme = { file = "../README.md", content-type = "text/markdown" }

dependencies = [
    "pandas",
    "matplotlib",
    "scikit-learn",
    "joblib",
    "juliacall",
    "PyYAML",
    "zarr",
    "optuna",
    "jsonschema"
]

[tool.hatch.build.targets.wheel]
packages = ["src/QuantumGrav"]

[tool.hatch.metadata]
allow-direct-references = true

# Optional dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-jupyter"
]
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-vvv",
    "-s",
]