[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "QuantumGrav"
version = "0.1.0"
description = "Graph neural networks for the causal set approach to quantum gravity"
authors = [
    { name = "Harald Mack", email = "harald.mack@protonmail.com" },
]
requires-python = ">= 3.12"
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }

dependencies = [
    "torch>=2.7.1+cu128", 
    "torchaudio>=2.7.1+cu128",
    "torchvision>=0.22.1+cu128",
    "torch_scatter>=2.1.2+pt27cu128",
    "torch_sparse>=0.6.18+pt27cu128",
    "torch_cluster>=1.6.3+pt27cu128",
    "torch_spline_conv>=1.2.2+pt27cu128",
    "pyg_lib>=0.4.0+pt27cu128",
    "torch-geometric>=2.6.1"
]

# Optional dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]
