[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/QuantumGrav"]

[project]
name = "QuantumGrav"
version = "0.1.0"
description = "Graph neural networks for the causal set approach to quantum gravity"
authors = [
    { name = "Harald Mack", email = "harald.mack@protonmail.com" },
]
requires-python = ">= 3.12"
license = { file = "../LICENSE"} 
readme = { file = "../README.md", content-type = "text/markdown" }

dependencies = [
    "torch>=2.7.1", 
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "torch_scatter>=2.1.2",
    "torch_sparse>=0.6.18",
    "torch_cluster>=1.6.3",
    "torch_spline_conv>=1.2.2",
    "pyg_lib>=0.4.0",
    "torch-geometric>=2.6.1",
    "torchviz>=0.0.3",
    "h5py>=3.14.0",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.3"
]

# Optional dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]
